--- a/content/projects/unkey.mdx
+++ b/content/projects/unkey.mdx
@@ -1,6 +1,6 @@
 ---
-title: unkey.dev
-description: Unkey is an open source API Key management solution. It allows you to create, manage and validate API Keys for your users. It’s built with security and speed in mind.
+title: Sports Recovery Lab
+description: Sports Recovery Lab is a chiropractor service. It allows you to create, manage and validate API Keys for your users. It’s built with security and speed in mind.
 date: "2023-07-01"
 url: https://unkey.dev
 published: true
