--- a/content/projects/unkey.mdx
+++ b/content/projects/unkey.mdx
@@ -1,13 +1,13 @@
 ---
 title: Sports Recovery Lab
-description: Sports Recovery Lab is a chiropractor service. It allows you to create, manage and validate API Keys for your users. It’s built with security and speed in mind.
+description: Sports Recovery Lab offers a chiropractor, injury prevention, and recovery services. Services for those who want to stay in the game!
 date: "2023-07-01"
-url: https://unkey.dev
+url: https://sportsrecoverylab.netlify.app/
 published: true
-repository: chronark/unkey
+repository: noxlumomagna/sportsrecoverylab
 ---
 
 
-[![](https://unkey.dev/images/landing/app.png)](https://unkey.dev)
+[![](https://unkey.dev/images/landing/app.png)](https://sportsrecoverylab.netlify.app/)
 
 Unkey is an open source API Key management solution. It allows you to create, manage and validate API Keys for your users. It’s built with security and speed in mind.
