--- a/content/projects/unkey.mdx
+++ b/content/projects/unkey.mdx
@@ -10,4 +10,4 @@ repository: noxlumomagna/sportsrecoverylab
 
 [![](https://unkey.dev/images/landing/app.png)](https://sportsrecoverylab.netlify.app/)
 
-Unkey is an open source API Key management solution. It allows you to create, manage and validate API Keys for your users. It’s built with security and speed in mind.
+Sports Recovery Lab offers a chiropractor, injury prevention, and recovery services. Services for those who want to stay in the game!
