--- a/content/projects/invoicify.mdx
+++ b/content/projects/invoicify.mdx
@@ -4,6 +4,7 @@ description: Designed to simplify invoicing processes and boost overall producti
 date: "2024-03-10"
 url: https://invoicify-nu.vercel.app/
 published: true
+repository: noxlumomagna/invoicify
   
 ---
 
